--- a/templates/movie.html
+++ b/templates/movie.html
@@ -29,9 +29,9 @@
             max-width: 100%;
         }
         
-        /* Override Bootstrap's default body background */
+        /* Light theme background */
         body {
-            background: #0b0f14 !important;
+            background: #f8fafc !important;
         }
     </style>
 </head>
