--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -19,12 +19,12 @@ html, body {
     position: relative;
     z-index: 1;
     overflow: hidden;
-    webkit-box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.175);
-    box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.175);
+    webkit-box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.08);
+    box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.08);
     padding: 60px;
-    background-color: transparent;
-        color: #747794;
-
+    background-color: #ffffff;
+    color: #475569;
+    border-top: 1px solid #e2e8f0;
 }
 
 
@@ -105,7 +105,7 @@ html, body {
 .footer_area .row .col-xl-auto {
     padding-right: 25px;
     padding-left: 25px;
-        color: #747794;
+        color: #475569;
 
 }
 
@@ -119,7 +119,7 @@ html, body {
 }
 .single-footer-widget .copywrite-text a:hover,
 .single-footer-widget .copywrite-text a:focus {
-    color: #747794FF;
+    color: #0f172a;
 }
 .single-footer-widget .widget-title {
     margin-bottom: 1.5rem;
@@ -132,18 +132,18 @@ html, body {
 }
 .single-footer-widget .footer_menu li a:hover,
 .single-footer-widget .footer_menu li a:focus {
-    color: #747794FF;
+    color: #0f172a;
 }
 .single-footer-widget .footer_menu li:last-child a {
     margin-bottom: 0;
-        color: #747794;
+        color: #475569;
 
 }
 
 .footer_social_area {
     position: relative;
     z-index: 1;
-        color: #747794;
+        color: #475569;
 
 
 }
@@ -153,7 +153,7 @@ html, body {
     text-align: center;
     width: 40px;
     display: inline-block;
-    background-color: #747794;
+    background-color: #e2e8f0;
     line-height: 40px;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -161,7 +161,7 @@ html, body {
 }
 .footer_social_area a i {
     line-height: 36px;
-        color: #747794;
+        color: #475569;
 
 }
 .footer_social_area a:hover,
@@ -188,24 +188,24 @@ html, body {
 }
 ol li, ul li {
     list-style: none;
-        color: #747794;
+        color: #475569;
 
 }
 
 ol, ul {
     margin: 0;
     padding: 0;
-        color: #747794;
+        color: #475569;
 
 }
 
 
 .section_padding_0_130{
-            color: #747794;
+            color: #475569;
 
 }
 
 a {
-                color: #747794;
+                color: #475569;
 
 }
